# jinja2-jsonschema

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
src/jinja2_jsonschema/: __init__.py  errors.py  extension.py
tests/: conftest.py  test_extension.py  test_inline.py  test_local.py  test_remote.py  utils.py
tests/filter/: test_inline.py  test_local.py  test_remote.py  utils.py
tests/test/: test_inline.py  test_local.py  test_remote.py  utils.py
