[project]
name = "jinja2-jsonschema"
version = "0.4.0"
description = "JSON/YAML schema validation within Jinja2 templates"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
keywords = ["jinja", "jinja2", "extension", "jsonschema", "json", "yaml"]
authors = [{ name = "Sigurd Spieckermann", email = "sigurd.spieckermann@gmail.com" }]
readme = "README.md"
dependencies = [
  "jinja2>=3.0.0",
  "jsonschema>=4.18.0",
  "referencing>=0.28.4"
]

[project.urls]
Homepage = "https://github.com/copier-org/jinja2-jsonschema"
Repository = "https://github.com/copier-org/jinja2-jsonschema"

[project.optional-dependencies]
yaml = ["pyyaml>=6.0.0"]

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "pre-commit-hooks==6.0.0",
  "ruff==0.15.0"
]
test = [
  "pychoir==0.0.29",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
]
typing = [
  "types-jsonschema==4.26.0.20260109",
  "types-pyyaml==6.0.12.20250915"
]

[tool.uv]
required-version = ">=0.6.8"
default-groups = "all"

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = ["COM812", "D100", "D104", "D107", "ISC001"]
select = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN401", "ARG001", "S101", "S701"]

[tool.mypy]
implicit_reexport = true
strict = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["jinja2_jsonschema"]
omit = ["tests"]

[tool.hatch.build.targets.sdist]
packages = ["src/jinja2_jsonschema"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
